# mega-nerf-viewer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: camera.hpp  data_format.hpp  data_spec.hpp  imwrite.h  mesh.hpp  opts.hpp  render_options.hpp  shader.hpp
include/cuda/: common.cuh  renderer_kernel.hpp  rt_core.cuh
include/n3tree/: n3tree.hpp
include/renderer/: renderer.hpp
src/: camera.cpp  data_format.cpp  imwrite.cpp  mesh.cpp  opts.cpp
src/cuda/: common.cu  renderer_kernel.cu
src/n3tree/: n3tree.cpp
src/renderer/: cuda_renderer.cpp
